--- a/src/tpls/sections.d/header.html
+++ b/src/tpls/sections.d/header.html
@@ -4,31 +4,31 @@
             <a href="#" class="header__logo">
                 <img src="img/common.d/header_logo.svg" class="img-cover" alt="">
             </a>
-            <nav class="header__nav">
-                <ul class="header-nav">
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link active">Главная</a>
+            <nav class="header__menu menu">
+                <ul class="menu__nav">
+                    <li class="menu__item">
+                        <a href="#" class="menu__link active">Главная</a>
                     </li>
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link">Консультация</a>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Консультация</a>
                     </li>
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link">Лечение без швов</a>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Лечение без швов</a>
                     </li>
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link">Контакты</a>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Контакты</a>
                     </li>
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link">Отзывы</a>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Отзывы</a>
                     </li>
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link">О специалисте</a>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">О специалисте</a>
                     </li>
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link">Новости</a>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Новости</a>
                     </li>
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link">Цены</a>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Цены</a>
                     </li>
                 </ul>
             </nav>
