--- a/src/main.html
+++ b/src/main.html
@@ -300,13 +300,13 @@
                                             </div>
                                             <div class="info__data">
                                                 <p><strong>Лечение таблетками фиброаденомы не существует, также не рекомендую просто наблюдать за развитием опухля.</strong></p>
-                                                <p><strong>Из хирургических методов лечение самый оптимальный ВАБ (Вакуумная Аспирационная Биопсия).</strong></p>
+                                                <p><strong>Из хирургических методов лечение самый оптимальный <span class="btn-text" data-src="#vab" data-fancybox="ddd">ВАБ (Вакуумная Аспирационная Биопсия)</span>.</strong></p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="buttons-group">
                                         <div class="buttons-group__item">
-                                            <a href="#" class="btn-outline-primary w-100">
+                                            <a href="#vab" class="btn-outline-primary w-100" data-fancybox>
                                                 <span>Записаться: Ростов</span>
                                             </a>
                                         </div>
@@ -379,7 +379,7 @@
                                                     </div>
                                                     <div class="info__data">
                                                         <p><strong>Существует комплексная терапия:</strong> таблетки, мази, здоровый образ жизни.</p>
-                                                        <p><strong>Или хирургическое вмешательство: Тонкоигольная биопсия, ВАБ или санация кист озоном.</strong></p>
+                                                        <p><strong>Или хирургическое вмешательство: <span class="btn-text" data-src="#tb" data-fancybox>Тонкоигольная биопсия</span>, <span class="btn-text" data-src="#vab" data-fancybox>ВАБ</span> или <span class="btn-text" data-src="#sko" data-fancybox>санация кист озоном</span>.</strong></p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -583,6 +583,83 @@
                                     </div>
                                 </div>
                                 <a href="#" class="comment-portal__link">123 отзыва</a>
+                            </div>
+                        </div>
+                        <div class="comments">
+                            <div class="swiper" data-comments>
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="img/d_comments/review__02.jpg" class="comments__item" data-fancybox="comments">
+                                            <img src="img/d_comments/review__02.jpg" class="img-fluid" alt="">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="comments__pagination">
+                                    <div class="swiper-pagination" data-comments-pagination></div>
+                                </div>
+                                <div class="comments__scrollbar">
+                                    <div class="swiper-scrollbar" data-comments-scrollbar></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -1399,76 +1476,10 @@
             </div>
         </div>
     </main>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer__main">
-                <div class="footer__primary">
-                    <a href="/" class="footer__logo">
-                        <img src="img/common.d/footer__logo.png" class="img-fluid" alt="">
-                    </a>
-                    <div class="footer__offices">
-                        <div class="footer__address">
-                            <i>
-                                <svg class="img-fluid" viewBox="0 0 13 20" xmlns="http://www.w3.org/2000/svg">
-                                    <use xlink:href="img/common.d/sprites/sprite.svg#icon-pin" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-                                </svg>
-                            </i>
-                            <span>г. Москва, ул. Сергия Радонежского, д.5/2, стр.1</span>
-                        </div>
-                        <div class="footer__address">
-                            <i>
-                                <svg class="img-fluid" viewBox="0 0 13 20" xmlns="http://www.w3.org/2000/svg">
-                                    <use xlink:href="img/common.d/sprites/sprite.svg#icon-pin" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-                                </svg>
-                            </i>
-                            <span>г. Москва, ул. Сергия Радонежского, д.5/2, стр.1</span>
-                        </div>
-                    </div>
-                    <div class="footer__contacts">
-                        <a href="mailto:example@mail.ru" class="footer__contact">
-                            <i>
-                                <svg class="img-fluid" viewBox="0 0 17 13" xmlns="http://www.w3.org/2000/svg">
-                                    <use xlink:href="img/common.d/sprites/sprite.svg#icon-email" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-                                </svg>
-                            </i>
-                            <span>example@mail.ru</span>
-                        </a>
-                        <a href="tel:+7 999 153 8341" class="footer__contact">
-                            <i>
-                                <svg class="img-fluid" viewBox="0 0 17 17" xmlns="http://www.w3.org/2000/svg">
-                                    <use xlink:href="img/common.d/sprites/sprite.svg#icon-phone" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
-                                </svg>
-                            </i>
-                            <span>+7 999 153 8341</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="footer__secondary">
-                    <div class="footer__buttons">
-                        <a href="#" class="footer__button" target="_blank">
-                            <span>Telegram</span>
-                        </a>
-                        <a href="#" class="footer__button" target="_blank">
-                            <span>WhatsApp</span>
-                        </a>
-                    </div>
-                    <div class="footer__elem">
-                        <div class="footer__dev">
-                            Создатель сайта - <a href="#" target="_blank">Асташко Никита</a>
-                        </div>
-                    </div>
-                    <div class="footer__text">
-                        <a href="#" class="footer__policy">Политика конфиденциальности</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
+    @@include('tpls/sections.d/footer.html', {})
 </div>
+@@include('tpls/sections.d/modals.html', {})
 
-@@include('tpls/modals.html', {})
 
 <script src="./js/index.min.js"></script>
 </body>
