--- a/src/tpls/sections.d/footer.html
+++ b/src/tpls/sections.d/footer.html
@@ -32,7 +32,7 @@
                         </i>
                         <span>example@mail.ru</span>
                     </a>
-                    <a href="tel:+7 999 153 8341" class="footer__contact">
+                    <a href="tel:+79991538341" class="footer__contact">
                         <i>
                             <svg class="img-fluid" viewBox="0 0 17 17" xmlns="http://www.w3.org/2000/svg">
                                 <use xlink:href="img/common.d/sprites/sprite.svg#icon-phone" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
