--- a/src/tpls/footer.html
+++ b/src/tpls/footer.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="footer__text">
-                    <a href="#" class="footer__policy">Политика конфиденциальности</a>
+                    <a href="https://vk.com/honest_pr_n" target="_blank" class="footer__policy">Политика конфиденциальности</a>
                 </div>
             </div>
         </div>
